--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,6 +28,21 @@
   color: #61dafb;
 }
 
+.is-strong-color {
+  color: rgba(234, 157, 174, 1) !important;
+}
+
+.is-strong-darker-color {
+  color: rgba(144, 61, 79, 1) !important;
+}
+
+.is-strong-background-color {
+  background-color: rgba(234, 157, 174, 1) !important;
+}
+.is-strong-darker-background-color {
+  background-color: rgba(144, 61, 79, 1) !important;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
