--- a/client/src/App.css
+++ b/client/src/App.css
@@ -42,17 +42,19 @@
 }
 
 .is-strong-background-color {
-  background-color: rgba(234, 157, 174, 1) !important;
+  background-color: rgba(234, 157, 174, 0.5) !important;
 }
 .is-strong-darker-background-color {
   background-color: rgba(144, 61, 79, 1) !important;
 }
-
 .is-light-grey {
   color: #555 !important;
 }
 .is-title {
  font-family: 'proxima-nova', sans-serif !important;
+}
+.navbar-item {
+  font-size: 1.10rem!important;
 }
 
 @keyframes App-logo-spin {
